@@ -1,5 +1,11 @@
 2007-11-15  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (get_secrets_dialog_response_cb): pop up the CA cert nag dialog on
+			GetSecrets calls too
+
+2007-11-15  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/Makefile.am
 	  src/wireless-security/eap-method-peap.h
 	  src/wireless-security/eap-method-peap.c
